[metadata]
name = ngcp-update-db-schema
version = 2.0
home_page = https://www.sipwise.com
project_urls =
  GitHub: issues = https://github.com/sipwise/db-schema/issues
  GitHub: repo = https://github.com/sipwise/db-schema
description = NGCP database schema versioning tool
long_description = file: README.md
long_description_content_type = text/markdown
author = Sipwise Development Team <support@sipwise.com>
author_email = support@sipwise.com
license = GPL
license_files = LICENSE.txt
platform = Debian/Linux

[options]
python_requires = >=3.9

[flake8]
exclude =
  .git
  .env
  __pycache__
  .eggs
  tools
max-line-length = 79
docstring-convention = google
extend-ignore =
    # unused import
    F401,
    # missing docstring in public module
    D100,
    # missing docstring in public package
    D104,

[mypy]
ignore_missing_imports = True
strict = True
